--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "opencc-wasm": "file:../wasm-lib",
+    "opencc-wasm": "^0.1.0",
     "opencc-js": "^1.0.5"
   },
   "scripts": {
